--- a/profolio.html
+++ b/profolio.html
@@ -12,7 +12,7 @@
             line-height: 1.6;
             position: relative;
             overflow-x: hidden;
-            cursor: url('images/sakura.png'), auto; /* Custom cursor image */
+            cursor: url('sakura.png'), auto; /* Custom cursor image */
         }
 
         header h1 {
