--- a/profolio.html
+++ b/profolio.html
@@ -12,7 +12,7 @@
             line-height: 1.6;
             position: relative;
             overflow-x: hidden;
-            cursor: url('sakura.png'), auto; /* Custom cursor image */
+            cursor: url('images/sakura.png'), auto; /* Custom cursor image */
         }
 
         header h1 {
@@ -336,7 +336,7 @@
                 shape: {
                     type: 'image',
                     image: {
-                        src: 'images/p.png', // Replace with the path to your flower image
+                        src: 'petal.png', // Replace with the path to your flower image
                         width: 100,
                         height: 100
                     }
