--- a/profolio.html
+++ b/profolio.html
@@ -12,7 +12,7 @@
             line-height: 1.6;
             position: relative;
             overflow-x: hidden;
-            cursor: url('images/sakura.png'), auto; /* Custom cursor image */
+            cursor: url('https://github.com/thethtar17/portfolio/blob/main/sakura.png'), auto; /* Custom cursor image */
         }
 
         header h1 {
@@ -265,7 +265,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card mb-4">
-                        <img src="/images/game.png" class="card-img-top" alt="Project 1 Image">
+                        <img src="https://github.com/thethtar17/portfolio/blob/main/game.png" class="card-img-top" alt="Project 1 Image">
                         <div class="card-body">
                             <h5 class="card-title">Game Project</h5>
                             <p class="card-text">This is an online game website. Include games especially board game.</p>
@@ -275,7 +275,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card mb-4">
-                        <img src="/images/project2.jpg" class="card-img-top" alt="Project 2 Image">
+                        <img src="https://github.com/thethtar17/portfolio/blob/main/project2.png" class="card-img-top" alt="Project 2 Image">
                         <div class="card-body">
                             <h5 class="card-title">Project Name 2</h5>
                             <p class="card-text">Brief description of Project 2. Include key features, technologies used, and your role.</p>
@@ -336,7 +336,7 @@
                 shape: {
                     type: 'image',
                     image: {
-                        src: 'petal.png', // Replace with the path to your flower image
+                        src: 'https://github.com/thethtar17/portfolio/blob/main/p.png', // Replace with the path to your flower image
                         width: 100,
                         height: 100
                     }
