--- a/profolio.html
+++ b/profolio.html
@@ -187,7 +187,7 @@
             <h2 class="display-6">About Me</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="/blob/main/petal.png" class="img-fluid profile-pic" alt="Profile Picture">
+                    <img src="https://github.com/thethtar17/portfolio/blob/main/petal.png" class="img-fluid profile-pic" alt="Profile Picture">
                 </div>
                 <div class="col-md-8">
                     <p class="lead">I am THET HTAR SANN, a developer. I specialize in Java Spring Boot.</p>
