--- a/profolio.html
+++ b/profolio.html
@@ -265,7 +265,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card mb-4">
-                        <img src="https://github.com/thethtar17/portfolio/blob/main/game.png" class="card-img-top" alt="Project 1 Image">
+                        <img src="game.png" class="card-img-top" alt="Project 1 Image">
                         <div class="card-body">
                             <h5 class="card-title">Game Project</h5>
                             <p class="card-text">This is an online game website. Include games especially board game.</p>
@@ -275,7 +275,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card mb-4">
-                        <img src="https://github.com/thethtar17/portfolio/blob/main/project2.png" class="card-img-top" alt="Project 2 Image">
+                        <img src="project2.png" class="card-img-top" alt="Project 2 Image">
                         <div class="card-body">
                             <h5 class="card-title">Project Name 2</h5>
                             <p class="card-text">Brief description of Project 2. Include key features, technologies used, and your role.</p>
