--- a/profolio.html
+++ b/profolio.html
@@ -275,7 +275,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card mb-4">
-                        <img src="project2.png" class="card-img-top" alt="Project 2 Image">
+                        <img src="sakura.png" class="card-img-top" alt="Project 2 Image">
                         <div class="card-body">
                             <h5 class="card-title">Project Name 2</h5>
                             <p class="card-text">Brief description of Project 2. Include key features, technologies used, and your role.</p>
