translate Japanese modifyone

--- a/profolio.html
+++ b/profolio.html
@@ -954,7 +954,7 @@
                     footer:{
                         footerTitle: "ここで見つけてください",
                         footerAddressTitle: "　住所: 桜台　伊勢原　神奈川県",
-                        footerRights: "&copy; 2024 ポートフォリオウェブサイト。全著作権所有。",
+                        footerRights: " 2024 ポートフォリオウェブサイト。全著作権所有。",
                     },
                 }
             };
