--- a/profolio.html
+++ b/profolio.html
@@ -296,6 +296,9 @@
                     <p id="about-position" class="lead">System Engineer</p>
                     <p id="about-description">I specialize in Java Spring Boot and PHP Laravel.</p>
                     <a id="download-cv" href="タッターサン.xlsx" class="btn btn-success" download="タッターサン.xlsx">Download CV</a>
+                    <a id="linkedin-profile" href="https://www.linkedin.com/in/thet-htar-sann-4946771b2/" target="_blank" class="btn btn-primary ms-2">
+                        <i class="bi bi-linkedin"></i> LinkedIn
+                    </a>
                 </div>
             </div>
         </div>
