--- a/profolio.html
+++ b/profolio.html
@@ -6,6 +6,8 @@
     <title>Porfolio Website</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <link rel="stylesheet" href="/css/styles.css">
     <style>
         body {
