Add new Project(Copilot)

--- a/porfolio.html
+++ b/porfolio.html
@@ -336,7 +336,7 @@
             <details>
               <summary><span id="project-one-details">Details</span><span id="project-one-summary">Key features • Tech • Role</span></summary>
               <div>
-                <h4 style="margin:12px 0 6px;font-size:13px;" id="project-one-keys-title">Key Features</h4>
+                <h4 style="margin:12px 0 6px;font-size:13px;" id="project-one-keys-title">主な特徴</h4>
                 <ul id="keyitemsOne">
                   <li>Multiplayer gameplay for two players locally.</li>
                   <li>Players can enjoy games like Tic Tac Toe, Four in a Row, and Checkers.</li>
@@ -372,7 +372,7 @@
             <details>
               <summary><span id="project-two-details">Details</span><span id="project-two-summary">Key features • Tech • Role</span></summary>
               <div>
-                <h4 style="margin:12px 0 6px;font-size:13px;" id="key-features-title">Key Features</h4>
+                <h4 style="margin:12px 0 6px;font-size:13px;" id="key-features-title">主な特徴</h4>
                 <ul id="key-features-list">
                   <li>User Registration and Authentication: Secure registration and login system.</li>
                   <li>Messaging: Users can send and receive instant messages.</li>
@@ -421,7 +421,7 @@
             <details>
               <summary><span id="netbuddy-details">Details</span><span id="netbuddy-summary">Key features • Tech • Role</span></summary>
               <div>
-                <h4 style="margin:12px 0 6px;font-size:13px;" id="netbuddy-keys-title">Key Features</h4>
+                <h4 style="margin:12px 0 6px;font-size:13px;" id="netbuddy-keys-title">主な特徴</h4>
                 <ul id="keyitemsNetBuddy">
                   <li>User registration and profile creation with customizable details.</li>
                   <li>Content sharing with media uploads saved to Google Drive.</li>
@@ -429,7 +429,6 @@
                   <li>Follow, friend, and interact with other users.</li>
                   <li>Post and comment management with edit and delete options.</li>
                 </ul>
-
                 <h4 style="margin:12px 0 6px;font-size:13px;" id="netbuddy-tech-title">Technologies Used</h4>
                 <ul id="techsNetBuddy">
                   <li><strong>Frontend:</strong> ASP.NET Razor Pages for user interface and interactions.</li>
@@ -470,7 +469,7 @@
             <details>
               <summary><span id="product-details">Details</span><span id="product-summary">Key features • Tech • Role</span></summary>
               <div>
-                <h4 style="margin:12px 0 6px;font-size:13px;" id="product-keyfeatures-title">Highlighted Features:</h4>
+                <h4 style="margin:12px 0 6px;font-size:13px;" id="product-keyfeatures-title">主な特徴</h4>
                 <ul id="keyitemsProductManagement">
                   <li>User registration and login with JWT and session-based authentication.</li>
                   <li>Add, view, and manage products in a user-friendly interface.</li>
@@ -496,6 +495,45 @@
                 <span id="product-go">View on GitHub</span>
               </a>
             </div>
+          </div>
+        </article>
+
+        <article class="project" aria-label="AI Workflow Automation Platform">
+          <div class="media">
+            <div class="gallery" aria-label="Copilot automation screenshots">
+              <img src="images/Copilot/automate.jpg" alt="AI Workflow Automation screenshot" />
+              <img src="images/Copilot/Copilot-Studio-Logo-Colorido-Oficial.webp" alt="Microsoft Copilot Studio logo" />
+            </div>
+          </div>
+          <div class="body">
+            <h3 id="ai-name-title">AI Workflow Automation Platform</h3>
+            <p id="ai-name-text">Designed and implemented AI-powered automation agents using Microsoft Copilot Studio to automate business workflows, email processing, and document management across Microsoft 365 services.</p>
+
+            <details>
+              <summary><span id="ai-details">Details</span><span id="ai-summary">Key features • Tech • Role</span></summary>
+              <div>
+                <h4 style="margin:12px 0 6px;font-size:13px;" id="ai-keys-title">主な特徴</h4>
+                <ul id="keyitemsAI">
+                  <li>Built multiple AI agents with multi-step conversational flows, triggers, branching logic, variables, and memory handling.</li>
+                  <li>Integrated with Power Automate for event-driven, scheduled, and background workflows with error handling and recovery.</li>
+                  <li>Automated email processing: extract content/attachments, route messages, generate replies, and send Teams/email notifications.</li>
+                  <li>Automated documents and files: generate Word/PDF, update Excel as a data store, fill templates, rename/move files, and manage metadata.</li>
+                  <li>Connected Microsoft 365 services (Outlook, OneDrive, SharePoint, Teams, Excel Online) and external REST APIs (JSON/webhooks).</li>
+                </ul>
+
+                <h4 style="margin:12px 0 6px;font-size:13px;" id="ai-tech-title">Technologies Used</h4>
+                <ul id="techsAI">
+                  <li><strong>AI Platform:</strong> Microsoft Copilot Studio</li>
+                  <li><strong>Automation:</strong> Microsoft Power Automate</li>
+                  <li><strong>Microsoft 365:</strong> Outlook, Teams, OneDrive, SharePoint, Excel Online</li>
+                  <li><strong>Integration:</strong> REST APIs / JSON, webhooks</li>
+                  <li><strong>Skills:</strong> AI prompt engineering, workflow automation</li>
+                </ul>
+
+                <h4 style="margin:12px 0 6px;font-size:13px;" id="ai-role-title">Role</h4>
+                <p id="ai-role-text">Designed, built, and deployed production-ready automation agents and workflows, including prompt design, integrations, monitoring, and version management.</p>
+              </div>
+            </details>
           </div>
         </article>
       </div>
